Added googleApiKey for MapView

--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map-item.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map-item.html
@@ -44,7 +44,9 @@
         Polymer({
             is: 'alexandria-catalog-map-item',
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior, AlexandriaBehaviors.MoldBehavior ],
+            behaviors: [
+                CottonBehaviors.TranslatorBehavior,
+                AlexandriaBehaviors.MoldBehavior ],
 
             properties : {
                 map : Object,
@@ -73,6 +75,10 @@
 
                 this._createInfoWindow();
                 this._onRefresh();
+            },
+
+            marker : function() {
+                return this.locationItem;
             },
 
             openInfoWindow : function() {
