--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../../lib/polymer/polymer.html">
 <link rel="import" href="../../../../lib/cotton-translator/cotton-translator-behavior.html">
 <link rel="import" href="../../../../lib/google-map/google-map.html">
-<link rel="import" href="../../../../lib/google-map-markerclusterer/google-map-markercluster.html">
+<link rel="import" href="../../../../lib/google-map-markerclusterer/google-map-markerclusterer.html">
 <link rel="import" href="alexandria-catalog-map-item.html">
 <link rel="import" href="alexandria-catalog-toolbar.html">
 
@@ -19,9 +19,13 @@
                     api-key="[[googleApiKey]]"
                     fit-to-markers="true"
                     disable-street-view-control="true"></google-map>
+
         <alexandria-catalog-toolbar operations="[[_operations(toolbar)]]"
                                     on-execute="_executeOperation"
                                     on-download="_downloadOperation"></alexandria-catalog-toolbar>
+
+        <google-map-markerclusterer map="{{map}}"></google-map-markerclusterer>
+
         <template is="dom-repeat" items="{{_itemList}}">
             <alexandria-catalog-map-item mode="map" map="{{map}}" mold="[[mold]]" item="[[item]]"></alexandria-catalog-map-item>
         </template>
@@ -60,7 +64,8 @@
                 _itemList: { type: Array, value: function() { return []; } },
                 countItemList: Number,
                 toolbar: Object,
-                _options : { type: Object, value: function() { return {}; } }
+                _options : { type: Object, value: function() { return {}; } },
+                _mapReady : { type: Boolean, value: function() { return false; } }
             },
 
             behaviors: [ CottonBehaviors.TranslatorBehavior ],
@@ -88,14 +93,16 @@
                 var element = this.querySelector("google-map");
                 element.addEventListener('google-map-idle', () => {
                     var bounds = element.map.getBounds();
-                    this.fire("location-change", { northEast : bounds.getNorthEast(), southWest : bounds.getSouthWest() });
-                });
+                this.fire("location-change", { northEast : bounds.getNorthEast(), southWest : bounds.getSouthWest() });
+            });
                 element.addEventListener('google-map-ready', (e) => {
                     this._notifyMapReady();
-                });
+            });
             },
 
             _refresh : function() {
+                if (!this._mapReady) return;
+
                 if (this._refreshTimeout != null)
                     window.clearTimeout(this._refreshTimeout);
 
@@ -110,10 +117,26 @@
                 for (var i=0; i<this.itemList.length; i++)
                     this.push("_itemList", this.itemList[i]);
 
-                this._refreshTimeout = window.setTimeout(() => this.querySelectorAll("alexandria-catalog-map-item").forEach((item) => item.setMap(map)), 100);
+                this._refreshTimeout = window.setTimeout(() => {
+                    var markers = [];
+                this.querySelectorAll("alexandria-catalog-map-item").forEach((item) => {
+                    item.setMap(map);
+                var marker = item.marker();
+                if (marker != null) markers.push(marker);
+            });
+                this._updateClusterer(markers);
+            }, 100);
+            },
+
+            _updateClusterer : function(markers) {
+                if (markers.length == 0) return;
+                var clusterer = this.querySelector("google-map-markerclusterer");
+                clusterer.markers = markers;
+                clusterer.repaint();
             },
 
             _notifyMapReady : function() {
+                this._mapReady = true;
                 this._refresh();
             },
 
