--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
@@ -220,6 +220,9 @@
             width: 300px;
             max-height: 240px;
         }
+        :host ::content .mold-item-link {
+            color: var(--default-primary-color);
+        }
         @media screen and (max-width: 980px) {
             :host .picture {
                 text-align: center;
@@ -277,6 +280,7 @@
                 var widget = this;
                 this.$.stampsTemplate.addEventListener("dom-change", function(e) {
                     window.setTimeout(function() { widget._createZombieLayers(); }, 50);
+                    window.setTimeout(function() { widget._listenToItemLinks(); }, 50);
                 });
             },
 
@@ -337,6 +341,15 @@
                 this.querySelectorAll(".display-layer").forEach((layer) => {
                     if (layer.querySelectorAll("cotton-zombie").length > 0) return;
                 this._addZombieLayer(layer, layer.getAttribute("name"), layer.getAttribute("id"));
+            });
+            },
+
+            _listenToItemLinks : function() {
+                var widget = this;
+                this.querySelectorAll(".mold-item-link").forEach((link) => {
+                    link.addEventListener("click", function() {
+                    widget.fire("navigate-item", this.name);
+                });
             });
             },
 
