Added support for alexandria elements personify when rendered into panel view

--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -151,6 +151,9 @@
         :host .full-size_true {
             height: 100%;
         }
+        :host .container .content {
+            @apply(--alexandria-catalog-item);
+        }
         :host .container .content .selector {
             visibility: hidden;
             opacity: 0;
