--- a/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-range-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-range-catalog.html
@@ -189,6 +189,9 @@
             attached : function() {
                 this.translate(AlexandriaTemporalRangeCatalogDictionary);
                 this.listenToDisplay();
+            },
+
+            _loadTimezoneOffset : function() {
                 this.timezoneOffset(new Date().getTimezoneOffset()*-1);
             },
 
