--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
@@ -232,7 +232,7 @@
             },
 
             _navigateMain : function() {
-                this.navigate("main");
+                this.navigateMain();
             }
 
         });
