--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-item-selector-combo.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-item-selector-combo.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../../lib/cotton-translator/cotton-translator-behavior.html">
 <link rel="import" href="../../../lib/paper-item/paper-item.html">
 <link rel="import" href="../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="../../../lib/paper-menu-button/paper-menu-button.html">
 
 <dom-module id="alexandria-item-selector-combo">
 
@@ -42,7 +43,7 @@
         }
 
         paper-menu {
-            width: 250px;
+            width: 238px;
         }
 
         paper-button {
