--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
@@ -104,6 +104,9 @@
             <template is="dom-if" if="[[stamp.isDownloadOperation]]">
                 <alexandria-mold-download-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" options="[[stamp.properties.options]]" on-download-option="_download" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-download-operation>
             </template>
+            <template is="dom-if" if="[[stamp.isPreviewOperation]]">
+                <alexandria-mold-preview-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" link="[[stamp.value]]" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-preview-operation>
+            </template>
             <template is="dom-if" if="[[stamp.isExportOperation]]">
                 <alexandria-mold-export-operation name$="[[stamp.name]]" title="[[stamp.properties.title]]" options="[[stamp.properties.options]]" from="[[stamp.properties.from]]" to="[[stamp.properties.to]]" on-export-option="_export" style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]"></alexandria-mold-export-operation>
             </template>
