--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel-catalog-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel-catalog-view.html
@@ -15,8 +15,10 @@
 
     <style>
         :host #container {
+            position: relative;
             padding-top: 8px;
             height: calc(100% - 8px);
+            overflow: hidden;
         }
         :host ::content alexandria-catalog ::content .main,
         :host ::content alexandria-temporal-range-catalog ::content .main,
