--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-preview-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-preview-operation.html
@@ -6,21 +6,20 @@
 <link rel="import" href="../../../../lib/paper-item/paper-item.html">
 <link rel="import" href="../../../../lib/iron-icon/iron-icon.html">
 <link rel="import" href="../../../../lib/pdf-browser-viewer/pdf-browser-viewer.html">
+<link rel="import" href="../../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
 
 <dom-module id="alexandria-mold-preview-operation">
 
     <template>
-        <div class="container">
-            <a on-tap="_preview">[[_title]]</a>
+        <div class="container"><a on-tap="_preview">[[_title]]</a></div>
+        <div id="dialogContainer" class="alexandria-mold-preview-operation-0">
+            <paper-dialog id="dialog" no-overlap entry-animation="scale-up-animation" exit-animation="fade-out-animation" on-iron-overlay-closed="_overlayClosed">
+                <paper-icon-button icon="close" on-tap="_close"></paper-icon-button>
+                <div style="height:calc(100% - 40px)">
+                    <pdf-browser-viewer file="[[document]]" width="100%" height="100%"></pdf-browser-viewer>
+                </div>
+            </paper-dialog>
         </div>
-        <paper-dialog id="dialog">
-            <template is="dom-if" if="[[!title.length]]">
-                <h2>[[_dialogTitle]]</h2>
-            </template>
-            <div>
-                <pdf-browser-viewer file="[[document]]" width="100%" height="100%"></pdf-browser-viewer>
-            </div>
-        </paper-dialog>
     </template>
 
     <style>
@@ -29,6 +28,29 @@
             color: var(--default-primary-color);
         }
         :host paper-dialog {
+            margin: 50px;
+            padding: 0;
+            background: white;
+            border-radius: 10px;
+            z-index: 200 !important;
+            top: 25px !important;
+            left: 0 !important;
+            position: fixed !important;
+        }
+        :host paper-dialog paper-icon-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 6px;
+            background: white;
+            border-radius: 50px;
+            margin: -15px -15px 0 0;
+            -webkit-box-shadow: -1px 1px 10px #888888;
+            -moz-box-shadow: -1px 1px 10px #888888;
+            box-shadow: -1px 1px 10px #888888;
+        }
+        :host paper-dialog pdf-browser-viewer {
+            height: 100%;
         }
     </style>
 
@@ -47,26 +69,58 @@
         Polymer({
             is: 'alexandria-mold-preview-operation',
 
-            behaviors: [ CottonBehaviors.TranslatorBehavior ],
+            behaviors: [ CottonBehaviors.TranslatorBehavior, Polymer.IronResizableBehavior ],
+
+            listeners: { 'iron-resize': '_fitDialog' },
 
             properties : {
                 title : { type: String, observer: '_refreshTitle' },
-                _title : String,
-                _dialogTitle : String
+                document : String,
+                width: Number,
+                _width : { type: Number, value: function() { return 100; } },
+                height: Number,
+                _height : { type: Number, value: function() { return 100; } },
+                _title : String
             },
 
             attached: function () {
                 this.translate(AlexandriaMoldPreviewOperationDictionary);
             },
 
+            _fitDialog : function() {
+                var style = "";
+
+                if (this._width != 100) {
+                    var width = $(window).width();
+                    style += ";width:" + this._width + "%;margin-left:" + ((width-(width*(this._width / 100)))/2) + "px;";
+                }
+                else style += ";width:calc(100% - 100px)";
+
+                if (this._height != 100) {
+                    var height = $(window).height();
+                    style += ";height:" + this._height + "%;margin-top:" + ((height - (height * (this._height / 100))) / 2) + "px;";
+                }
+                else style += ";height:calc(100% - 100px)";
+
+                this.$.dialog.style.cssText += style;
+            },
+
             _refreshTitle : function() {
                 var titleDefined = this.title != null && this.title != "";
                 this._title = titleDefined ? this.title : this.Preview;
-                this._dialogTitle = titleDefined ? this.title : this.Title;
             },
 
             _preview : function(e) {
+                document.querySelector("body").appendChild(this.$.dialogContainer);
                 this.$.dialog.open();
+            },
+
+            _close : function() {
+                this.$.dialog.close();
+            },
+
+            _overlayClosed : function(e) {
+                this.appendChild(this.$.dialogContainer);
             }
 
         });
